--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,67 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.10MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 未知国家-2.46MB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
-  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-12.13MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-362.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇭🇰 香港-12.04MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇭🇰 香港-9.47MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.60MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
   - {name: 🇭🇰 香港-3.12MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇬🇧 英国-1.75MB/s(Youtube:不良林), server: 152.89.210.105, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 45.78.5.246, port: 51366, type: ss, cipher: aes-256-gcm, password: ERyG9Y6LA7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
       - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
       - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
       - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-12.13MB/s(Youtube:不良林)
       - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
       - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
@@ -75,47 +76,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
       - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
       - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
       - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +132,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.10MB/s(Youtube:不良林)
-      - 未知国家-2.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-12.04MB/s(Youtube:不良林)
       - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.60MB/s(Youtube:不良林)
       - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
