--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇭🇰 香港-11.33MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.40MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-11.13MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇭🇰 香港-11.07MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.55MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-11.13MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.02MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.75MB/s(Youtube:不良林), server: 152.89.210.105, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 45.78.5.246, port: 51366, type: ss, cipher: aes-256-gcm, password: ERyG9Y6LA7}
   - {name: 🇺🇸 美国-4.20MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.79MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇭🇰 香港-11.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇭🇰 香港-11.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,22 +53,22 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇭🇰 香港-11.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇭🇰 香港-11.33MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -76,30 +76,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇭🇰 香港-11.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇭🇰 香港-11.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -107,15 +107,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇭🇰 香港-11.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,15 +132,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇭🇰 香港-11.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
       - 🇭🇰 香港-11.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
